--- a/templates/List.html
+++ b/templates/List.html
@@ -22,6 +22,7 @@
                 <th>Name</th>
                 <th>Middle Name</th>
                 <th>Last Name</th>
+                <th>Phone Number</th>
                 <th>Created</th>
                 <th>Updated</th>
                 <th>Actions</th>
@@ -34,6 +35,7 @@
                     <td>{{ d.name }}</td>
                     <td>{{ d.middle_name }}</td>
                     <td>{{ d.last_name }}</td>
+                    <td>{{ d.phone }}</td>
                     <td>{{ d.created|date:"SHORT_DATETIME_FORMAT" }}</td>
                     <td>{{ d.updated|date:"SHORT_DATETIME_FORMAT" }}</td>
                     <td>
