--- a/templates/List.html
+++ b/templates/List.html
@@ -14,6 +14,18 @@
                 <h3 class="display-4 fw-normal">Contact Book</h3>
         </div>
     </div>
+    <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+        <form method="get">
+            <div class="row g-3 align-items-center">
+                <div class="col-auto">
+                    <span>
+                        <input type="text" class="form-control" name="txtSearch" id="txtSearch" placeholder="Search by phone, name ..."/>
+                        <input type="submit"  class="btn btn-success btn-sm" value="Search">
+                    </span>
+                </div>
+            </div>
+        </form>
+    </div>
     <a href="/add" class="btn btn-success btn-sm">Add New</a>
     <br>
         <table class="table table-responsive table-sm">
@@ -53,6 +65,24 @@
             {% endif %}
             </tbody>
         </table>
+
+<div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 <footer class="pt-4 my-md-5 pt-md-5 border-top">
     <div class="row">
             Made By David Xequé, 2022
